cmake_minimum_required(VERSION 3.29)
project(dsa_C C)

set(CMAKE_C_STANDARD 11)

add_executable(dsa_C
    Questions/insertiondeletion.c
    Questions/Middle_of_linkedList.c
    Revision/CircularSingly.c
    Revision/DoublyCircular.c
    Revision/DoublyLinkedList.c
    Revision/Linked_List_Insertion.c
    Revision/SearchingLinkedList.c
    Revision/SinglyLinkedList.c
    Revision/StackLinkedList.c
    ArrayADT.c
    Circular_Linked_List.c
    CircularQueueUsingArray.c
    Deletion_In_LinkedList.c
    DeletionInArray.c
    DoublyLinkedList.c
    Insertion_In_LinkedList.c
    InsertionInArray.c
    LinearVsBinarySearch.c
    LinkedList_Creation_And_Traversal.c
    Queue_using_Arrays.c
    Stack_Coding_Infinix_to_Postfix.c
    Stack_Paranthisis_Matching.c
    Stack_Using_Array.c
    Stack_using_Linked_List.c)
